--- a/public/css/map.css
+++ b/public/css/map.css
@@ -2,7 +2,7 @@
     height: 600px;
 }
 
-.centered-buttons {
-    margin: 0 auto;
-    display: block;
+div.btn-group {
+    display: inline-block;
+    margin-top: 10px;
 }
