integrated sql; added river line pulling;

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,3 +91,7 @@ div.row-center {
   -moz-box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
   box-shadow: 0px 0px 24px -1px rgba(56, 56, 56, 1);
 }
+
+.white {
+  color: $light-grey;
+}
