--- a/public/templates/map.html
+++ b/public/templates/map.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div id="mapGroup" class="col-sm-9 col-xs-12" style="margin-bottom: 10px;">
         <div id="map"></div>
-        <div class="row-center">
-            <div class="btn-group" role="group">
-                <button id="submitBtn" class="btn btn-primary" ng-click="addPoints()">Submit</button>
-                <button id="undoBtn" class="btn btn-default" ng-click="removePoint()">Undo</button>
-                <button id="clearBtn" class="btn btn-default" ng-click="clearPoints()">Clear</button>
-            </div>
-        </div>
+        <!--<div class="row-center">-->
+            <!--<div class="btn-group" role="group">-->
+                <!--<button id="submitBtn" class="btn btn-primary" ng-click="addPoints()">Submit</button>-->
+                <!--<button id="undoBtn" class="btn btn-default" ng-click="removePoint()">Undo</button>-->
+                <!--<button id="clearBtn" class="btn btn-default" ng-click="clearPoints()">Clear</button>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
     <div id="riverGroup" class=" row-center col-sm-3 col-xs-12">
         <div id="riverWell" class="well">
