--- a/sass/main.scss
+++ b/sass/main.scss
@@ -107,3 +107,16 @@ div.row-center {
 .white {
   color: $light-grey;
 }
+
+#infowindow {
+  box-shadow: 0px 1px 4px 2px rgba(0,0,0,0.3);
+  border: 1px solid rgba(0,0,0,0.3);
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 1);
+  width: 100px;
+  height: 40px;
+}
+
+.auto-margin {
+  margin: auto;
+}
